# Amethyst-temp

./: .gitattributes  CPD with extension 2.md  Group4_Core_Project_Document.md  README.md  test
amethyst/: export_presets.cfg  project.godot
amethyst-scoreboard/: Cargo.toml  compose.yml
amethyst-scoreboard/src/: api.rs  appstate.rs  auth.rs  db.rs  main.rs  schema.rs
amethyst/Images/Crystals/: blank_crystal.png.import  crystal_of_darkness.png.import  crystal_of_earth.png.import  crystal_of_fire.png.import  crystal_of_light.png.import  crystal_of_water.png.import  crystal_of_wind.png.import  crystal_particles.png.import
amethyst/Images/NPC's and player/: enemy_sprite.png.import  player_sprite.png.import  player_sprite_v2.png.import  rock_boy.png.import  rock_man.png.import  staff.png.import  water_boy.png.import  water_man.png.import  wizard.png.import
amethyst/Images/Spells/: fire spritesheet.aseprite  fire spritesheet.png.import  fire.png.import  fireball.png.import  rock.png.import  water.png.import  water_blast.png.import  wind_blast.png.import
amethyst/Images/Textures/: Dialogue_box.png.import  earth_ground.png.import  grass.png.import  (+4 more)
amethyst/Sounds/: Found something!.wav.import  Load zone.wav.import  Unlocked something.wav.import  enemies spottes.wav.import
amethyst/scenes/: level.tscn
amethyst/scripts/: death_screen.gd  death_screen.gd.uid  magic_math.gd  magic_math.gd.uid  pause_manager.gd  pause_manager.gd.uid  pause_menu.gd  pause_menu.gd.uid  queue_class.gd.uid
amethyst/themes/: main_theme.tres
wiki/: git-plugin.md  playtest-1-questions.md
(+122 files in other folders)
