[package]
name = "amethyst-scoreboard"
version = "0.3.1"
edition = "2024"
#license = "AGPL-3.0-only"
#repository = "https://github.com/stratal-systems/minicycle-rs"

[dependencies]
bytes = "1.11.0"
sqlite = "0.37.0"
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
